--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="box summary">
                 <h2 class="head2">Summary</h2>
                 <div class="blo">
-                    <div class="i react" ><img src="reaction.svg"> Reaction&emsp;&emsp;&emsp;&emsp;&emsp;<span class="n">80&nbsp;&nbsp;</span><span class="num">/ 100</span></div>
-                    <div class="i memo" ><img src="memory.svg"> Memory&emsp;&emsp;&emsp;&emsp;&emsp;<span class="n">92&nbsp;&nbsp;</span><span class="num">/ 100</span></div>
-                    <div class="i verb" ><img src="verbal.svg"> Verbal&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<span class="n">61&nbsp;&nbsp;</span><span class="num">/ 100</span></div>
-                    <div class="i vis" ><img src="visual.svg"> Visual&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<span class="n">72&nbsp;&nbsp;</span><span class="num">/ 100</span></div>
+                    <div class="i react" ><img src="reaction.svg" alt="Reaction Logo"> Reaction&emsp;&emsp;&emsp;&emsp;&emsp;<span class="n">80&nbsp;&nbsp;</span><span class="num">/ 100</span></div>
+                    <div class="i memo" ><img src="memory.svg" alt="Memory Logo"> Memory&emsp;&emsp;&emsp;&emsp;&emsp;<span class="n">92&nbsp;&nbsp;</span><span class="num">/ 100</span></div>
+                    <div class="i verb" ><img src="verbal.svg"alt="Verbal Logo"> Verbal&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<span class="n">61&nbsp;&nbsp;</span><span class="num">/ 100</span></div>
+                    <div class="i vis" ><img src="visual.svg" alt="Visual Logo"> Visual&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<span class="n">72&nbsp;&nbsp;</span><span class="num">/ 100</span></div>
                     <button class="cont">Continue</button>
                 </div>
         </div>
